--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ subprojects {
     repositories {
         mavenLocal()
         mavenCentral()
-        maven { url 'http://repo.maven.apache.org/maven2' }
+        maven { url 'https://repo.maven.apache.org/maven2' }
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
         maven { url 'http://repo.dmulloy2.net/nexus/repository/public/' }
         maven { url 'https://repo.spongepowered.org/maven' }
