--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ subprojects {
         maven { url 'http://repo.dmulloy2.net/nexus/repository/public/' }
         maven { url 'https://repo.spongepowered.org/maven' }
         maven { url 'https://repo.ashcon.app/nexus/content/repositories/snapshots/' }
+        maven { url 'https://repo.codemc.org/repository/maven-public/' }
         maven {
             url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/'
 
