--- a/core/build.gradle
+++ b/core/build.gradle
@@ -9,4 +9,6 @@ dependencies {
     compileOnly 'org.bukkit:bukkit:1.15.2-R0.1-SNAPSHOT'
     compileOnly 'org.bukkit:craftbukkit:1.15.2-R0.1-SNAPSHOT'
     compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.4.0"
+
+    included group: 'de.tr7zw', name: 'item-nbt-api', version: '2.3.1'
 }
