--- a/lobby/build.gradle
+++ b/lobby/build.gradle
@@ -7,5 +7,5 @@ dependencies {
 
     compileOnly 'org.spigotmc:spigot-api:1.15.2-R0.1-SNAPSHOT'
     compileOnly 'org.bukkit:bukkit:1.15.2-R0.1-SNAPSHOT'
-    compileOnly 'org.bukkit:craftbukkit:1.15.2-R0.1-SNAPSHOT'
+    compileOnly files('../libs/craftbukkit-1.15.2.jar')
 }
