--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -22,15 +22,24 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build --build-cache --daemon --configure-on-demand --parallel
+    - name: Upload built jars
+      uses: actions/upload-artifact@v2
+      with:
+        name: jars
+        path: bin/*.jar
   deploy:
     runs-on: self-hosted
     needs: build
     steps:
+    - name: Download built jars
+      uses: actions/download-artifact@v2
+      with:
+        name: jars
     - name: Create directory
       run: |
         mkdir -p ~/static/lobby000a/plugins/
         mkdir -p ~/static/bungee000a/plugins/
-    - name: Move jar
+    - name: Move jars
       run: |
         mv bin/master-1.0-SNAPSHOT.jar ~/static/master/
         mv bin/lobby-1.0-SNAPSHOT.jar ~/static/lobby000a/plugins/
