--- a/lobby/build.gradle
+++ b/lobby/build.gradle
@@ -5,7 +5,7 @@
 dependencies {
     included project(path: ':core', configuration: 'default')
 
-    compileOnly 'org.spigotmc:spigot-api:1.15.2-R0.1-SNAPSHOT'
-    compileOnly 'org.bukkit:bukkit:1.15.2-R0.1-SNAPSHOT'
-    compileOnly files('../libs/craftbukkit-1.15.2.jar')
+    compile 'org.spigotmc:spigot-api:1.15.2-R0.1-SNAPSHOT'
+    compile 'org.bukkit:bukkit:1.15.2-R0.1-SNAPSHOT'
+    compile files('../libs/craftbukkit-1.15.2.jar')
 }
