--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,10 +5,9 @@
 dependencies {
     included project(path: ':common', configuration: 'default')
 
-    compileOnly 'org.spigotmc:spigot-api:1.15.2-R0.1-SNAPSHOT'
-    compileOnly 'org.bukkit:bukkit:1.15.2-R0.1-SNAPSHOT'
-    compileOnly files('../libs/craftbukkit-1.15.2.jar')
-
-    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.4.0"
-    included group: 'de.tr7zw', name: 'item-nbt-api', version: '2.3.1'
+    compile 'org.spigotmc:spigot-api:1.15.2-R0.1-SNAPSHOT'
+    compile 'org.bukkit:bukkit:1.15.2-R0.1-SNAPSHOT'
+    compile files('../libs/craftbukkit-1.15.2.jar')
+    compile 'com.comphenix.protocol:ProtocolLib:4.4.0'
+    compile 'de.tr7zw:item-nbt-api:2.3.1'
 }
