--- a/master/build.gradle
+++ b/master/build.gradle
@@ -10,5 +10,5 @@ jar {
 
 dependencies {
     included project(path: ':common', configuration: 'default')
-    included group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
+    included 'com.mashape.unirest:unirest-java:1.4.9'
 }
